# F1CD

./: .gitignore  CMakeLists.txt  README.md  setup.ps1
Project1/: Project1.sln
Project1/Project1/: Project1.vcxproj
designs/: fghfg.f1design  gfjghjgjh.f1design
src/: CarDesign.cpp  CarDesign.h  CarPart.h  ConfigurationManager.cpp  ConfigurationManager.h  main.cpp
